fix Java 8 build